--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,6 +4,15 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    env:
+      DATABASE_HOSTNAME=localhost
+      DATABASE_PORT=5432
+      DATABASE_PASSWORD=password1234
+      DATABASE_NAME=fastapi2
+      DATABASE_USERNAME=postgres
+      SECRET_KEY=bc81779d27850faca260cb3d2bcdc53450318a064d10dcfc2dfd4ad5fb5decbc
+      ALGORITHM=HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES=30
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
